--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,43 @@
+body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgb(10,10,33);
+  color: rgb(223,223,226);
+}
+
+h1 {
+  margin-top: 100px;
+}
+
+#customer-input {
+  display: flex; 
+  align-items: center; 
+  flex-direction: column;
+}
+
+#customer-input > * {
+  margin-bottom: 15px;
+}
+
+label {
+  font-size: 20px;
+}
+
+button {
+  width: 150px;
+  height: 30px;
+  background: linear-gradient(180deg, rgb(245,203, 98), rgb(243, 177,79));
+  border: 2px solid rgb(243, 177,79);
+  font-size: 18px;
+  font-weight: bold;
+}
+
+input {
+  width: 250px;
+  height: 30px;
+}
+
 .hidden {
   display: none;
 }
