--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@ body {
   color: rgb(223,223,226);
 }
 
+/* Utlity classes */
+
+.hidden {
+  display: none;
+}
+
+/* Customer input section */
+
 h1 {
   margin-top: 100px;
 }
@@ -38,6 +46,24 @@ input {
   height: 30px;
 }
 
-.hidden {
-  display: none;
+/* Cash Register section */
+
+#cash-register {
+  margin-top: 45px;
+}
+
+#cash-drawer {
+  height: 60px;
+  width: 350px;
+  background-color: rgb(163,200,250);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#cash-drawer-handle {
+  height: 20px;
+  width: 20px;
+  background-color: black;
+  border-radius: 50%;
 }
