--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,33 @@ input {
   margin-top: 45px;
 }
 
+#display {
+  background-color: rgb(163,200,250);
+  width: 225px;
+  height: 60px;
+  margin-left: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#inner-display {
+  background-color: black;
+  width: 200px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+#display-attachment {
+  background-color: rgb(163,200,250);
+  width: 50px;
+  height: 40px;
+  margin-left: 75px;
+}
+
 #cash-register-body {
   width: 350px;
   height: 275px;
@@ -84,6 +111,7 @@ input {
   width: 50%;
   height: 88%;
   padding-left: 8px;
+  font-size: 18px;
 }
 
 #cash-drawer {
