--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,15 @@ body {
 
 /* Customer input section */
 
+#change-due {
+  margin-bottom: 10px;
+}
+
+#change-due > p {
+  margin: 0 0 5px 0;
+  font-size: 20px;
+}
+
 h1 {
   margin-top: 100px;
 }
